# audio-master-rs

./: Cargo.toml  README.md  build.rs
src/: addons.rs  audio_buffer.rs  consts.rs  float_type.rs  globals.rs  lib.rs
src/audio_master/: audio_master.rs  effect.rs  master.rs  mod.rs  private.rs  processor.rs  stream.rs
src/audio_math/: audio_math.rs  filter.rs  math.rs  mod.rs  private.rs
src/backend/: backend.rs  mod.rs  private.rs  public.rs
src/ffi/: libsamplerate.rs  mod.rs
src/resampler/: base.rs  mod.rs  resampler_libsamplerate.rs  resampler_sinc.rs
