[package]
name = "audio-master"
version = "1.0.0"
edition = "2024"

authors = ["zieklass"]
description = "Rich Audio API based on libsamplerate and cpal."
license = "MIT OR Apache-2.0"
keywords = ["audio", "dsp", "quality", "resample", "sound"]
categories = ["multimedia"]
readme = "README.md"
repository = "https://github.com/executable1210/audio-master-rs"
homepage = "https://github.com/executable1210/audio-master-rs"
documentation = "https://docs.rs/audio-master"

[dependencies]
biquad = "0.5.0"
cpal = "0.16.0"
fxhash = "0.2.1"
num-traits = "0.2.19"
rustfft = "6.4.1"

[build-dependencies]
cmake = "0.1.54"

[features]
libsamplerate = []